--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -72,7 +72,7 @@ Anna Galikowska-Gajewska
 
 Oghenemudiakevwe Igbi and Ezinne Igbi
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1PJxdmrf1Gk5EYOSnBV54d_y8ckKkp6wT/view?usp=sharing)
+[Read Online](/articles/issue9/towards-a-strategic-policy-formulation-for-enhanced-music-directing-and-ensemble-management-in-nigeria) [Download](https://drive.google.com/file/d/1PJxdmrf1Gk5EYOSnBV54d_y8ckKkp6wT/view?usp=sharing)
 
 #### Pedagogical Approach Towards Developing Early Childhood Music Education In Nigeria
 
