--- a/blog/issue2/2017-02-27.md
+++ b/blog/issue2/2017-02-27.md
@@ -49,7 +49,7 @@ Deng Liang
 
 ### Gender and Identity in Music and Dance
 
-##### Music Preference and the Issues of Social Challenges Among Nigerian Youth: Implications for Moral Development
+#### Music Preference and the Issues of Social Challenges Among Nigerian Youth: Implications for Moral Development
 
 Femi Abiodun
 
