--- a/issue9/article03/2024-02-23.mdx
+++ b/issue9/article03/2024-02-23.mdx
@@ -262,12 +262,12 @@ ________________
 1. Adebayo, J. O. 2017. "‘Vote not Fight’: Examining music’s role in fostering non-violent elections in Nigeria." _African Journal on Conflict Resolution 17(1): 55-77–77._
 2. Adeduntan, A. 2018. ”Yoruba imaginary in the eco-cinema of Tunde Kelani.” _Green Letters 22(3): 288–300_. [doi](https://doi.org/10.1080/14688417.2018.1531724)
 3. Adeoye, J. O. 2013. “Patriotic music: A tool for sustaining national security in Nigeria.” _Ondo Journal of Science and Science Education 4(1): 9-15_.
-4. Akingbe, N. and P. A. Onanuga. 2018. “Leveraging the Airwaves: Harvesting Ingenuity in Nigerian Hip Hop’s Lyrics.” _Journal of the Musical Arts in Africa 15 (1-2): 19–40_. [doi](https://%20doi.org/10.2989/18121004.2018.1534335)
+4. Akingbe, N. and P. A. Onanuga. 2018. “Leveraging the Airwaves: Harvesting Ingenuity in Nigerian Hip Hop’s Lyrics.” _Journal of the Musical Arts in Africa 15 (1-2): 19–40_. [doi](https://doi.org/10.2989/18121004.2018.1534335)
 5. Allen, A. S. 2011. “Prospects and problems for ecomusicology in confronting a crisis of culture.” _Journal of the American Musicological Society 62(2): 414-424_.
 6. _____. 2017. “Greening the Curriculum: Beyond a Short Music History in Ecomusicology.” _Journal of Music History Pedagogy 8(1): 91–109_.
 7. Allen, A. S. and K. Dawe. 2016. _Current Directions in Ecomusicology – Music, Culture, Nature_. Edited by Aaron S. Allen and Kevin Dawe. Routledge, Taylor & Francis Group.
 8. Challe, Tiffany. 2015.“Ecomusicology: back to the roots of sound / music and environmental sustainability.” MA Thesis, Graduate Center, City University of New York. [academicworks](https://academicworks.cuny.edu/gc_etds/883)
-9. Fasan, R. 2014. “Wetin dey happen? Wazobia, Popular Arts, and Nationhood.” _Journal of African Cultural Studies_. [doi](http://dx.doi.org/10.1080/13696815.2014.977852)
+9. Fasan, R. 2014. “Wetin dey happen? Wazobia, Popular Arts, and Nationhood.” _Journal of African Cultural Studies_. [doi](https://dx.doi.org/10.1080/13696815.2014.977852)
 10. Feisst, S. 2016. “Music and Ecology.” _Contemporary Music Review 35(3): 293–295._
 11. Goodman, D. J. 2011. _Promoting diversity and social justice: Educating people from privileged groups_. London: Routledge.
 12. Guy, N. 2009. “Flowing down Taiwan’s Tamsui river: Towards an ecomusicology of the environmental imagination.” _Ethnomusicology 53(2): 218-248_.
@@ -284,14 +284,14 @@ ________________
 23. Salawu, O. M. 2020. ”Abàmì Èdá: Personhood and Socio-political Commitment in Fela’s Music.” _Muziki, 1–18_. [doi](https://doi.org/10.1080/18125980.2020.1781547)
 24. Schippers, H. and D. Bendrups. 2015. “Ethnomusicology, Ecology and the Sustainability of Music Cultures.” _The World of Music 4(1): 9-19_.
 25. Taylor, H., and A. Hurley. 2014. “Music and Environment: Registering Contemporary Convergences.” _Journal of Music Research 20(1): 1-18_.
-26. Titon, J. T. 2018. “Ecomusicology and the Problems in Ecology.” _MUSICultures, 45(1/2): 255–264_. [library.illinois.edu](http://www.library.illinois.edu/proxy/go.php?url=http://search.ebscohost.com/login.aspx?direct=true&db=asn&AN=136632385&site=eds-live&scope=site)
+26. Titon, J. T. 2018. “Ecomusicology and the Problems in Ecology.” _MUSICultures, 45(1/2): 255–264_. [library.illinois.edu](https://www.library.illinois.edu/proxy/go.php?url=http://search.ebscohost.com/login.aspx?direct=true&db=asn&AN=136632385&site=eds-live&scope=site)
 27. Titus, O. S. 2019. “Ecomusicology, Indigenous Knowledge And Environmental Degradation In Ibadan, Nigeria.” _Journal of International Library of African Music, 72–90_.
 28. ____. 2018. “Musical narratives of oil exploration and sea degradation from the Niger Delta.” In _Monsoon Assemblages, edited by L. Bremner, 91–99_.
 
 </div>
 
 <div className='up'>
-	<a href='#'> ![Go to top]('../up.png') </a>
+	<a href='#'>![Go to top](../up.png)</a>
 </div>
 
 </div>
