--- a/issue9/article04/2024-02-22.mdx
+++ b/issue9/article04/2024-02-22.mdx
@@ -199,7 +199,7 @@ Moreover, tickets of their organised shows across various venues in the United K
 </div>
 
 <div className='up'>
-	<a href='#'>![Go to top]('../up.png')</a>
+	<a href='#'>![Go to top](../up.png)</a>
 </div>
 
 </div>
