--- a/issue9/article05/2024-02-21.mdx
+++ b/issue9/article05/2024-02-21.mdx
@@ -336,7 +336,7 @@ __________________
 </div>
 
 <div className='up'>
-	<a href='#'>![Go to top]('../up.png')</a>
+	<a href='#'>![Go to top](../up.png)</a>
 </div>
 
 </div>
