--- a/issue9/article06/2024-02-20.mdx
+++ b/issue9/article06/2024-02-20.mdx
@@ -380,7 +380,7 @@ __________________
 </div>
 
 <div className='up'>
-	<a href='#'>![Go to top]('../up.png')</a>
+	<a href='#'>![Go to top](../up.png)</a>
 </div>
 
 </div>
