--- a/issue9/article07/2024-02-19.mdx
+++ b/issue9/article07/2024-02-19.mdx
@@ -120,7 +120,7 @@ In the open-handed mode, hands trace curves effortlessly in space, creating a me
 <div className='figureBox'>
 <figure>
 		<img
-			src={require('@site/issue9/article06/fig1a.png').default}
+			src={require('@site/issue9/article07/fig1a.gif').default}
 			alt='Figure 1a. Snapshots of MIIOs during vocal improvisation for Afzal Hussain'
 		/>
 		<figcaption>
@@ -132,7 +132,7 @@ In the open-handed mode, hands trace curves effortlessly in space, creating a me
 <div className='figureBox'>
 <figure>
 		<img
-			src={require('@site/issue9/article06/fig1b.png').default}
+			src={require('@site/issue9/article07/fig1b.gif').default}
 			alt='Figure 1b. Snapshots of MIIOs during vocal improvisation for Lakhan Lal Sahu'
 		/>
 		<figcaption>
@@ -173,7 +173,7 @@ In practical terms, the delineation between the mentioned functional categories 
 <div className='figureBox'>
 <figure>
 		<img
-			src={require('@site/issue9/article06/fig2.png').default}
+			src={require('@site/issue9/article07/fig2.png').default}
 			alt='Figure 2. The 4 different music-related movement types (based on function) and their connection to sound on a continuum reflecting link to sound'
 		/>
 		<figcaption>
@@ -307,7 +307,7 @@ __________________
 </div>
 
 <div className='up'>
-	<a href='#'>![Go to top]('../up.png')</a>
+	<a href='#'>![Go to top](../up.png)</a>
 </div>
 
 </div>
