--- a/issue9/article08/2024-02-18.mdx
+++ b/issue9/article08/2024-02-18.mdx
@@ -1,12 +1,219 @@
 ---
 title: "#8 The Synergy Of Music, Movement And Technology In The Author's Choreographies"
 slug: the-synergy-of-music-movement-and-technology
-description: ""
-authors: []
-tags: []
+description: "This article discusses the issues of interdisciplinarity and intermediality of art(s). The author has been exploring this subject for many years. Her artistic works, which constitute a kind of spatial-movement visualizations, have been recently enhanced with an additional medium: multimedia."
+authors: [annagg]
+tags: [music, movement, choreography of music, multimedia, technology]
 ---
 
 # #8 The Synergy Of Music, Movement And Technology In The Author's Choreographies
 
 {/* truncate */}
 
+```
+UDC: 78.071.1 Жак-Далкроз E.
+     37.015:781.15
+COBISS.SR-ID 139173129 CIP - 5
+
+Received: Oct 15, 2023
+Reviewed: Oct 28, 2023
+Accepted: Dec 10, 2023
+
+```
+
+# #8 The Synergy Of Music, Movement And Technology In The Author's Choreographies
+
+export function Name({ author, affil, email }) {
+  return (
+    <p className="author">
+      <strong>{author}</strong>
+      <span>{affil}</span>
+      <span>{email}</span>
+    </p>
+  );
+}
+
+<div className="authors">
+  <Name
+    author="Anna Galikowska-Gajewska"
+    affil="Stanisław Moniuszko Academy of Music, Gdańsk, Poland"
+    email="a.galikowska@amuz.gda.pl"
+  />
+  x`
+</div>
+
+<div className='abstract'>
+<div className='citation'>
+<strong>Citation:</strong>  Gajewska-Galikowska, Anna. 2024. "The Synergy of Music, Movement and Technology In The Author's Choreographies." [_Accelerando: Belgrade Journal of Music and Dance 9:8_](http://localhost:3000/articles/issue8/art)
+
+</div>
+
+<div>
+	<h4>Abstract</h4>
+	<div>
+
+    	This article discusses the issues of interdisciplinarity and intermediality of art(s). The author has been exploring this subject for many years. Her artistic works, which constitute a kind of spatial-movement visualizations, have been recently enhanced with an additional medium: multimedia. The article broadly refers to the history of the Eurhythmics method creation by its inventor, Emil Jaques-Dalcroze. Music in this method is an inspiration for creative solutions, such as choreography music, in which Dalcroze was heavily inspired by the tradition of Greek chorea - the unity of three. The author highlights the connotations between Dalcroze's concept of music in movement and Dick Higgins’ intermedia art theory. Her original music choreographies are deeply rooted in the contemporary artistic and aesthetic theories, such as: the concept brought forward by William B. Worthen and Manuel DeLanda's theory. The artistic works discussed below present the interdisciplinary and integrative approach to choreography. They were created to be performed with two musical pieces by contemporary Polish composers. The two pieces considerably differ in terms of sound generation, creation techniques, genre, cast of performers, and general nature of music. They have one thing in common, though: the synergy of music, movement and technology.
+
+    	<div>
+    		<strong>Keywords:</strong>
+    		<i>
+    			{' '}
+    			 music, movement, choreography of music, multimedia, technology
+    		</i>
+    	</div>
+    </div>
+
+</div>
+
+</div>
+
+<div className='text'>
+
+## Introduction
+
+Music and dance have been a constant element of human life since times immemorial. Movement, understood slightly differently than dance, namely, more natural and casual, was used by Emil Jaques-Dalcroze in an innovative (given the period of its creation: the early 20th century) concept of artistic education. That Swiss musician, composer, conductor and pedagogue based his method, The Eurhythmics, as the center of all activities undertaken within the scope of education, as well as in the artistic domain. Three elements: eurhythmics, solfege and improvisation intertwine and complement one another, and that leads the recipients to a better understanding of music through their own movement-based experience. Thus, we do not only listen to music, but also spread it in space by means of movement and multimedia. Such a poly-sensory way of experiencing music and its expression in the artistic form by Dalcroze is connected with his fascination with the culture of ancient Greece, in particular with the idea of the synthesis of arts, deriving therefrom.
+
+Emil Jaques-Dalcroze in his stage performances consciously referred to the tradition of Greek choreia the threei-unity, expressed by the unity of music, movement and words. Emil Jaques-Dalcroze in his artistic endeavours consciously referred to the idea, present in the Greek tradition, of unity of music, movement and words. Just like the ancient Greek tragedians, he was the author of music, lyrics and the movement composition: he was simultaneously a conductor of orchestra and choir and a director of the performers' movement interpretations. Drawing inspiration from Greek sculptures, depicting beauty of the human body in an uninhibited way, Dalcroze developed 20 gestures, which he then animated in his first movement interpretations.
+
+In 1912 in „Festspielhaus” - The Festival Theatre in Hellerau - the extract (2nd act) from Orpheus and Eurydice, ‘Descent to the underworld’, by C. W. Gluck, was performed with a spatial-movement routine based on the concept of Adolph Appia (Appia 1974, 189). One year later, the abridged version of the opera was shown to the public. It attracted attention and reverberated around the cultural circles of Europe. Its success emphasises that Dalcroze's artistic achievements, being also the result of his cooperation with Adolf Appia, in the scope of the concept of modern theatre, could be recognized as the beginnings of contemporary intermedial art.
+
+## Music, Movement and Drama Elements
+
+The three-unity of Greek choreia is considered to be the genesis of intermediality, the term coined by Dick Higgins, and who called it a phenomenon par excellence. Higgins defines the idea of intermediality as:
+
+> conceptual merger of two or more previously defined areas of art or interest. (Higgins, 2000c, 151)
+
+In this particular context, artistic activities in the scope of Dalcroze's method - movement interpretations of music - may be regarded as hybrid combinations of two media: music and movement, whereas enriching them with additional visual elements results in the creation of a new, integrated means of expression.
+
+Integration - synergy are terms which very well characterize the world of today and determine the activities of a human being, also those in the scope of art. The author of the article has been exploring this topic, particularly in her artistic works, in which she adds material shape to music in movement of performers designed in space.
+
+> Movement interpretations of a musical piece are the most beautiful and the most perfect way of reflecting music by means of spatial-movement measures. They constitute the synthesis of music and movement, thanks to which they allow a deeper experience of music that is embodied in the movement of the human body. (Galikowska-Gajewska 2012 49)
+
+Recently the author has been experimenting with the upgrading options for her music choreographies with the use of technology. Her choreographies perfectly reflect the contemporary discourse regarding the intermediality of art. Simultaneously, she is constantly searching for scientific theories which could support and affirm her artistic endeavours, One of those theories is described by William B.Worthen, American professor, author of many academic publications on the inter-relations between drama, theatre and performance. In the preface to his book, Drama. Between Poetry and Performance. He stated that his aim is to, among other things, describe:
+
+> what kind of modification occurs (...) in the perception of drama when we cease to identify it with material bodies of actors (theater) or with material traces of printed poetry (literature), and we begin to identify it with digital INFORMATION [highlighted by Worthen] technology. (B. W. Worthen 2013, 39)
+
+Worthen's statement may be successfully transferred to the art of music choreography creation, especially the ones in which the authors choose to include multimedia.
+
+In Worthen's view, dramatic performance is suspended between two identities: He refers to the first one as 'literary'. Drama may be interpreted as a text and what is implied in the text. The second identity is of performative nature and situates drama in the context of performance shown on stage. The author also points out that digital information technology affects the form of stage performance, as it constitutes an element of the dramatic structure of the performance, adds to its content, "forms its visual aspect and its audio layer" (Ibid., 19).
+
+Worthen argues that the development and quality of technology substantially affect the shape of the performance itself, as well as its perception. Furthermore, technology contradicts the perception of the performance as an ephemeric phenomenon, happening 'here and now'. For instance, video recordings shown during the performance, which are obviously prepared and edited beforehand, as well as technologies allowing live broadcast of spectacles, prove that technology introduces a different perspective of time and space in which the performance is presented, and accordingly changing its identity.
+
+Digital data materializing on stage overlap with the corporeal human practices (Macioszek 2020, 26). The authors' choreographies of music might also be analyzed in the aspect of other interesting theory - that of Manuel DeLanda, Mexican-American writer, artist and philosopher, who treats every kind of matter which the reality is made up of in the categories of dynamics, agency and expressiveness.
+
+> And thus, in the context of those three forms of matter, one can view an opera, a spectacle,
+> a performance, in which digital technologies improve the recipients' sensory perception and broaden "fields of impact" made by the stage performance, that is to say - broaden the effects and consequences related to the performance in time and space (sound, movement, visual). (Ibid., 59)
+
+Such a synthetic approach to the perception of art is represented by the author's music choreographies discussed below.
+
+## Krzysztof Knittel, Free for(m) macwin2
+
+Krzysztof Knittel's composition Free for(m) macwin2, computer-based music, inspired the author to create the intermedial artefact. With the composer's permission, she selected the extracts of the piece containing a particularly interesting sound combination, in which the sound objects are generated by monochord and ISA harp. She used sound generators built by Piotr Sych in Windows operating system, patch MaWe created by Marek Chołoniewski and Marcin Wierzbicki and designed on the basis of Max/MSP program and modern non-musical devices iPhone i iPad, with applications by Apple (Karwaszewska and Galikowska-Gajewska 2018). It was presented in the “21st Generative Art Conference 2018.”, held in Verona, Italy, held in Verona (Italy), organized by Politecnico di Milano University (18-20.12. 2018).
+
+Knittel's music, bombarding the listener with its juxtaposed, contrasting sounds, immediately formed clear, distinct, evocative images in the choreography author's imagination.
+
+> Rich, full-range sound of the musical work existing in multiple sound fields triggered off the use of multimedia to create movement visualization compatible with sonic image of the musical work. (Ibid., 277)
+
+The author's own creative concept is an individual suggestion that making use of contemporary media - video recordings, visualizations of selected sound fields, and movement performed live in the space on stage. Anna GG, as the creator of choreography as well as the performer, experimented in terms of making use of the human body as a direct medium reflecting music and its expression.
+
+Music and movement-related improvisation - spontaneous, almost intuitive way of responding to sound stimuli - became for the author , who was at the same time the performer, a base for creating the choreography, limited only by the anatomical properties of the human body. The suggested artistic concept, as a synchronization of sound and light effects, stage visualization combined with live body movement, represents typical Dalcroze-like solutions referring to presenting music in movement and space, in which the movement expression of the performer is reinforced with modern media tools, giving it a new - intermedial dimension.
+
+In the author's choreography the expression of performer's movement is enhanced with modern media tools, given a new, intermedial dimension. The author defines her own, author's version of polymedial spectacle, a performance original in its content and form of communication, which reveals symbolic meaning of sound emission, interacting with choreography, light, theatrical form and other electronic medium.
+
+The corporeal aspect, so meaningful for theatrical performance here also became a medium, allowing to establish verbal and non-verbal communication with the recipient by means
+of gestures, body language and movement.
+
+> Movement interpretation of a musical work fits perfectly into the contemporary discourse concerning polymedial spectacle. It constitutes another structural element of the multidimensional multimedia spectacle, endowing it with greater momentum and dynamism. (Ibidem.)
+
+A fruitful cooperation with Paweł Wajde (the author of multimedia and photography, who frequently collaborated with the author in the past) and Bogna Wajde (make-up artist and costume designer) broadened the author's knowledge and experience in the field of other artistic activities.
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article08/pic1.png').default}
+			alt='Picture 1. The choreography on Free for(m) macwin2 by Krzysztof Knittel.'
+		/>
+		<figcaption>
+			**Picture 1.** The choreography on Free for(m) macwin2 by Krzysztof Knittel. Photo by Paweł Wajde.
+		</figcaption>
+	</figure>
+
+</div>
+
+<div className='figureBox'>
+  <iframe
+  width={662}
+  height={405}
+  src="https://www.youtube.com/embed/OydGV95Q8wA"
+  title="Krzysztof Knittel - Free for(m) macwin2"
+  frameBorder={0}
+  allow="encrypted-media;"
+  referrerPolicy="strict-origin-when-cross-origin"
+/>
+
+</div>
+
+Modern technology and the methods of live sound and image generation enabled creators to employ new spatial and movement-related solutions, where the movement concept performed on stage in real time was synchronised with computer-generated movement performance. In this polymedial spectacle the recipient could follow, in real time, live movement on stage, movement displayed on the screen (recorded earlier) and visualisation.
+
+## Marek Czerniewicz, Theme from a movie "Nakręceni"[Shot] for the harp, piano and the ocarina
+
+The composition comes from a documentary short film by Marcin Bortkiewicz, entitled "Nakręceni" (2012), in which the director portrays the community of children and teenagers from dysfunctional families. The music heard in the final sequences of the film forms a poetic juxtaposition with the complicated and difficult issues addressed in the film by the director. It also reflects the composer's empathy and compassion for the portrayed characters. The theme from "Nakręceni" represents the ever-present trend in the composer's works characterised by gentle sound layer, peacefulness, and melancholic mood.
+
+The author structured her choreography so as to be coherent with the music. She performed the musical piano part herself, and the movement execution of the melodic and rhythmic line of the harp she delegated to her student - Shengya Huang - a Chinese student at The Stanisław Moniuszko Academy of Music in Gdańsk. The musical part of the ocarina was transferred to the multimedia layer, which, while following the music, implies the changes occurring in music by visual means.
+
+The selection of images for the visual layer is a conscious choice of the music choreography author was developed by Paweł Wajde. Multimedia should be treated there as an equal performer, who is at the same time a complementary comment to the actions on stage as it is a magnificent background for the two performers moving in the outdoor space - the beach. The author's concept of music choreography with the use of technology constitutes an integral whole, highlighting the gentle sound structure of the piece, peacefulness, reverie, tranquility and communion with nature.
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article08/pic2.png').default}
+			alt='Picture 2 The choreography on Theme from a movie "Nakręceni"[Shot] by Marek Czerniewicz.'
+		/>
+		<figcaption>
+			**Picture 2.**  The choreography on Theme from a movie "Nakręceni"[Shot] by Marek Czerniewicz. Photo by Ma Feier.
+		</figcaption>
+	</figure>
+
+</div>
+
+<div className='figureBox'>
+  <iframe
+  width={662}
+  height={405}
+  src="https://www.youtube.com/embed/qwMk7ninEr0"
+  title="Marek Czerniewicz - Theme from a movie &quot;Nakręceni&quot;" 
+  frameBorder={0}
+  allow="encrypted-media;"
+  referrerPolicy="strict-origin-when-cross-origin"
+/>
+
+</div>
+
+The author's music choreography was shown for the first time to the international audience during the performance entitled - Polish contemporary music in movement images - world premiere, at the 15th International Congress on Musical Signification in Barcelona 2022.
+
+__________________
+
+## Conclusion
+
+The author's music choreographies discussed above reflect the contemporary theories of interdisciplinarity and intermediality in art, received by multiple senses. Such polisensoric trend is represented in the artistic works by Anna Galikowska-Gajewska, in which the synergy of music, movement and technology (multimedia) leads to the emergence of one, coherent spatial-movement image of music. The author hopes that her choreographies will be appreciated by the audience and will let them better understand, experience, and discover music. She also believes that such a form of presenting music in movement is the best way to promote and popularize the musical pieces, especially those contemporary ones from outside the mainstream, not so easy in reception.
+
+__________________
+## References
+
+<div className='references'>
+
+1. Appia, Adolphe. 1974. _Dzieło sztuki żywej i inne prace_. Warszawa: Wydawnictwo Artystyczne i Filmowe.
+2. Galikowska-Gajewska, Anna. 2012. _Brzmienie w interpretacjach ruchowych utworu muzycznego. Debussy, Cage, Penderecki, Szalonek, Dobrowolski, Olczak, Kaiser._ Gdańsk: Akademia Muzyczna im. Stanisława Moniuszki.
+3. Higgins, Dick. 2000. _Muzyka z zewnątrz, tłum. Joanna Holzman, Nowoczesność od czasu postmodernizmu oraz inne eseje, wybór i oprac_. Gdańsk: Piotr Rypson.
+4. Karwaszewska, M., A. Galikowska-Gajewska. 2018. “Sounds And Computer - Artistic Message.” In _Generative Art 2018 edited by Celestino Soddu and Enrica Colabella, 264-277_. Domus Argenia Publisher, Milan. ISBN:978‐88‐96610‐34‐3. [artscience-ebookshop](https://www.artscience-ebookshop.com/ebooks_free/ga2018ebook.pdf)
+5. Macioszek, S. 2020. _Opera, ciała, technologie_. Wydawnictwo Naukowe Uniwersytetu Mikołaja Kopernika, Toruń.
+6. DeLanda, M. 2006. “Matter, Matters.” _Domus No.893_.
+7. Worthen W. B., 2013. “Dramat.” In _Między literaturą a przedstawieniem_. Edited by M. Borowski, M. Sugiera. Kraków.
+
+</div>
+
+<div className='up'>
+	<a href='#'>![Go to top](../up.png)</a>
+</div>
+
+</div>
